--- a/DragNPCs_Natural/src/DragNPCs_Natural/DragNPCs_Natural.vcxproj
+++ b/DragNPCs_Natural/src/DragNPCs_Natural/DragNPCs_Natural.vcxproj
@@ -7,7 +7,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="config.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="script.cpp" />
@@ -17,19 +16,14 @@
     <ClInclude Include="..\..\inc\enums.h" />
     <ClInclude Include="..\..\inc\natives.h" />
     <ClInclude Include="..\..\inc\types.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="ini.h" />
     <ClInclude Include="keyboard.h" />
     <ClInclude Include="script.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="DragPeds_Scripted_Config.ini" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8D82F34A-1D64-465B-84B1-37F89AD3D20B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>IntimidationMod_Scripted</RootNamespace>
-    <ProjectName>IntimidationMod_Scripted</ProjectName>
+    <RootNamespace>DragNPCs_Natural</RootNamespace>
+    <ProjectName>DragNPCs_Natural</ProjectName>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -52,7 +46,7 @@
     <TargetExt>.asi</TargetExt>
     <OutDir>D:\Games\Red Dead Redemption 2</OutDir>
     <IntDir>tmp\$(Configuration)\</IntDir>
-    <TargetName>DragPeds_Scripted</TargetName>
+    <TargetName>DragPeds_Natural</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
